--- a/examples/1/style.css
+++ b/examples/1/style.css
@@ -12,14 +12,17 @@ body{
   height: 100%;
   min-height: 500px;
   white-space: nowrap;
+  font-size: 0;
+  padding: 0 10px;
 }
 
 .container{
   background: #bbb;
   display: inline-block;
-  margin: 0 20px;
+  margin: 0 10px;
   vertical-align: top;
   white-space: normal;
+  font-size: 1rem;
 }
 
 .typeA{
