--- a/examples/1/style.css
+++ b/examples/1/style.css
@@ -10,7 +10,7 @@ body{
 }
 #target{
   height: 100%;
-  min-height: 500px;
+  /* min-height: 500px; */
   white-space: nowrap;
   font-size: 0;
   padding: 0 10px;
@@ -26,16 +26,16 @@ body{
 }
 
 .typeA{
-  height: 100vh;
+  height: 100%;
 }
 .typeB{
-  height: 60vh;
+  height: 60%;
 }
 .typeC{
   height: 300px;
   margin-top: calc(50vh - 150px);
 }
 .typeD{
-  height: 60vh;
-  margin-top: 40vh;
+  height: 60%;
+  vertical-align: bottom;
 }
