--- a/examples/1/style.css
+++ b/examples/1/style.css
@@ -21,8 +21,11 @@ body{
   display: inline-block;
   margin: 0 10px;
   vertical-align: top;
-  white-space: normal;
+  
   font-size: 1rem;
+}
+.container > *{
+  white-space: normal;
 }
 
 .typeA{
@@ -48,4 +51,8 @@ body{
 
 [data-maxcolumns]{
   background: yellow;
+}
+
+[data-mincolumns]{
+  background: red;
 }
